--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -1,10 +1,15 @@
 /*-----------------MAP CSS-------------*/
-
+.map{
+    background-color: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 30px 0 10px 0;
+}
 .map__image{
-    margin: 2% 0 0 6%;
     width: 40%;
-    float: left;
     background-color: #ddd;
+    border-radius: 10px;
     padding: 60px;
 }
 .map__image path{
@@ -19,20 +24,23 @@
     stroke-width: 3px;
 }
 .map__list{
-    width: 50%;
-    padding: 40px;
-    background-color:#8ac863 ;
+    width: 25%;
+    padding: 10px;
+    background-color:#fff ;
+    text-decoration: none;
+    margin-left: 30%;
 }
 .map__list a{
     color: inherit;
     text-decoration: none;
     transition: color 0.3s;
 }
-
+#poi_selector{
+    list-style-type: none;
+}
 #poi_selector > li .select-container select {
     height: 50px;
     border-radius: 5px !important;
-    margin-top: 35px;
     padding-left: 15px;
     font-size: 14px;
     color: #333333;
@@ -87,6 +95,7 @@ header{
     align-items: center;
     width: 100%;
     margin-left: 13%;
+    list-style-type: none;
 }
 #add-favorite .autocomplete {
     position: relative;
