réadaptation de l'interface - Header

--- a/src/Components/Map/MapComponent.html
+++ b/src/Components/Map/MapComponent.html
@@ -1,7 +1,7 @@
 
 <body>
     <div class="map" id="map">
-        <div class="map__image">
+        <div class="map__image" style="background-color: rgb(53, 153, 184);">
 
             <svg xmlns="http://www.w3.org/2000/svg" xmlns:amcharts="http://amcharts.com/ammap" xmlns:xlink:title=""  xlink="http://www.w3.org/1999/xlink" version="1.1" viewBox="0 0 612 585">
                 <g>
@@ -50,8 +50,7 @@
         </div>
 
         <div class="map__list">
-            <ul id='poi_selector'>
-                <li>
+
                   <div class="select-container">
                       <select name="poi-selector-zones">
                           <option value="-1">Choisir un lieu</option>
@@ -85,8 +84,6 @@
                             <a href="#">Corse</a>
                         </div>
                   </div>
-              </li>
-          </ul>
       
       
         </div>
