--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -2,13 +2,14 @@
 
 .map__image{
     margin: 2% 0 0 6%;
-    width: 40%;
+    width: 50%;
     float: left;
     background-color: #ddd;
     padding: 60px;
 }
 .map__image path{
     fill: #8ac863;
+
     stroke: #000000;
     stroke-width: 0.3px;
     transition: fill 0.3s;
@@ -19,7 +20,7 @@
     stroke-width: 3px;
 }
 .map__list{
-    width: 50%;
+    width: 65%;
     padding: 40px;
     background-color:#8ac863 ;
 }
@@ -29,7 +30,7 @@
     transition: color 0.3s;
 }
 
-#poi_selector > li .select-container select {
+.select-container select {
     height: 50px;
     border-radius: 5px !important;
     margin-top: 35px;
@@ -38,7 +39,7 @@
     color: #333333;
     background-color: #fff;
     cursor: pointer;
-    width: 100%;
+    width: 45%;
     border: 1px solid #a6a6a6;
 }
 
@@ -50,18 +51,87 @@
 
 header{
     width: 100%;
+    font-family: "Quicksand",sans-serif;
 }
 
+.sticky {
+    position: fixed;
+    top: 0;
+    width: 100%
+  }
+  
+  .sticky + header {
+    padding-top: 102px;
+  }
+
 #header #header_top .row{
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
+    display: grid;
+    grid-template-columns: "20% 60% 20%";
+
 }
 
 #header #header_top .row #header_top_left{
-    margin-right: 15px;
     display: flex;
 }
+
+.input_research{
+    border:solid 1px lightgrey;
+    border-radius:10px; 
+    padding:15px;
+    position:relative; 
+    top: 30px;
+    left:100px; 
+    font-size: 14px
+}
+
+.icon_research{
+    position: relative;
+    left: 430px;
+    bottom: 5px;
+    height: 22px;
+    width: 22px;
+    filter: invert(92%) sepia(10%) saturate(10%) hue-rotate(351deg) brightness(65%) contrast(95%);
+}
+
+.icon_research:hover{
+    filter: invert(9%) sepia(84%) saturate(3909%) hue-rotate(194deg) brightness(95%) contrast(102%);
+}
+
+
+
+
+.div_icon_reseaux{
+    position: relative;
+    top:45px;
+    left: 150px;
+}
+
+.div_icon_reseaux{
+    height: 65px;
+    width: 65px;
+}
+
+#facebook:hover{
+    filter: invert(15%) sepia(92%) saturate(7105%) hue-rotate(316deg) brightness(88%) contrast(103%);
+}
+
+#twitter:hover{
+    filter: invert(13%) sepia(95%) saturate(6762%) hue-rotate(316deg) brightness(88%) contrast(103%);
+}
+
+#linkedin:hover{
+    filter: invert(13%) sepia(95%) saturate(6762%) hue-rotate(316deg) brightness(88%) contrast(103%);
+}
+
+#bell{
+    position: relative;
+    height:30px;
+    width: 30px;
+    bottom: 20px;
+    left: 375px;
+    filter: invert(92%) sepia(10%) saturate(10%) hue-rotate(351deg) brightness(65%) contrast(95%);
+}
+
 
 .recherche input[type="text"]{
     height: 45px;
@@ -75,7 +145,82 @@ header{
     max-width: 100%;
 }
 
+#header_middle #header_middle_middle .onglet {
+    font-family: "Quicksand",sans-serif;
+    margin:5px;
+    padding-top: 5px;
+    font-size:12px;
+    font-weight:800;
 
+
+    .icon{
+        display:inline-flex ;
+        height:17px ;
+        width:17px;
+}
+
+    .icon_down{
+        display: inline-flex;
+        height:17px ;
+        width:17px;
+        position: relative;
+        top: 2px;
+        left: 2px;
+    }
+
+    .libelle{
+        display: flexbox;
+        margin-left: 15px ;
+        position:relative;
+        bottom: 2px
+    }
+
+
+     #burger_menu{
+        height:25px ;
+        width:25px;
+        position:relative;
+        left: 50%;
+        filter: invert(20%) sepia(98%) saturate(5013%) hue-rotate(312deg) brightness(83%) contrast(112%);
+    }
+
+    
+
+    #burger_menu:hover{
+        filter: invert(9%) sepia(84%) saturate(3909%) hue-rotate(194deg) brightness(95%) contrast(102%);
+    }
+}
+
+
+#prevision:hover {
+    transition: 350ms;
+    filter: invert(13%) sepia(95%) saturate(6762%) hue-rotate(316deg) brightness(88%) contrast(103%);
+}
+
+#meteo_marine:hover {
+    transition: 350ms;
+    filter: invert(13%) sepia(95%) saturate(6762%) hue-rotate(316deg) brightness(88%) contrast(103%);
+}
+
+#meteo_montagne:hover {
+    transition: 350ms;
+    filter: invert(13%) sepia(95%) saturate(6762%) hue-rotate(316deg) brightness(88%) contrast(103%);
+}
+
+#climat:hover {
+    transition: 350ms;
+    filter: invert(13%) sepia(95%) saturate(6762%) hue-rotate(316deg) brightness(88%) contrast(103%);
+}
+
+#actus_dossiers:hover {
+    transition: 350ms;
+    filter: invert(13%) sepia(95%) saturate(6762%) hue-rotate(316deg) brightness(88%) contrast(103%);
+}
+
+#services:hover {
+    transition: 350ms;
+    filter: invert(13%) sepia(95%) saturate(6762%) hue-rotate(316deg) brightness(88%) contrast(103%);
+}
 
 #header #header_bottom {
     background-color: #036ba1;
@@ -90,24 +235,27 @@ header{
 }
 #add-favorite .autocomplete {
     position: relative;
-    display: flex;
-    align-items: center;
+    display: inline-flex;
+    grid-template-columns: "20% 60% 20%";
 }
 #add-favorite .autocomplete span {
+    padding:'5px'  ;
     font-family: "Quicksand",sans-serif;
-    margin-right: 0px;
+    margin: 5px;
     font-size: 12px;
-    font-weight: 500;
+    font-weight: 600;
     color: #ffffff;
 }
 #add-favorite button {
-    width: 30px;
-    height: 38px;
+    width: 20px;
+    height: 20px;
     cursor: pointer;
     display: flex;
-    justify-content: center;
-    align-items: center;
-    color: #ffffff;
+    position: relative;
+    top: 5px;
+    left: 5px;
+    filter: invert(100%) sepia(0%) saturate(11%) hue-rotate(227deg) brightness(102%) contrast(106%);
+
 }
 
 
