--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -47,7 +47,7 @@
 
 
 
-
+/*-----------------HEADER CSS-------------*/
 
 header{
     width: 100%;
@@ -259,3 +259,130 @@ header{
 }
 
 
+/*-----------------FIN HEADER CSS-------------*/
+
+
+/*-----------------FOOTER CSS-------------*/
+
+
+.grid{
+    display: grid ;
+    grid-template-columns: 20% 60% 20% ;
+    background-image: linear-gradient(to bottom,#0076c9 0%,#1c9bd4 100%);
+    padding: 2%;
+    font-family: "Quicksand";
+    grid-template-rows:(7, 100px)
+}
+
+.title_top_consult{
+    display:flex;
+    color:white;
+    justify-content:center;
+    font-size:22px;
+    font-weight:bold;
+    grid-column: 2/3
+}
+
+.top_ville_consult{
+    max-width: 815px;
+    display: flex;
+    align-items: flex-start;
+    flex-wrap: wrap;
+    margin: 0px auto;
+    list-style: none;
+    grid-row: 3;
+    grid-column:2/3;
+    color: white;
+    font-family: 'Quicksand',sans-sherif;
+    margin-top: 2px;
+    font-weight: 600;
+    scale: 0.9
+}
+
+.separateur{
+    grid-row: 2;
+    grid-column: 2/3;
+    border: solid 3px white;
+    border-radius: 2px;
+    width: 220px;
+    justify-self:center;
+    scale:0.5;
+    margin-top:10px;
+    margin-bottom:10px
+}
+
+.ville_consult{
+    flex-grow: 1;
+    display: flex; 
+    width: 33%;
+    height: 29px;
+    cursor: pointer;
+
+}
+
+.button_reseaux{
+    display: flex;
+    gap: 30px;
+    grid-row: 4;
+    grid-column: 2/3;
+    justify-self: center;
+    margin-top: 25px;
+}
+
+.bouton{
+    background-color: #145e9a;
+    border-radius: 100%;
+    height: 45px;
+    width: 45px;
+}
+
+.icon_bouton{
+    scale: 0.6;
+    justify-self: center;
+    filter: invert(500%) sepia(0%) saturate(300%) hue-rotate(227deg) brightness(402%) contrast(356%);
+    cursor: pointer;
+}
+
+.bouton:hover  {
+    filter: invert(13%) sepia(97%) saturate(6847%) hue-rotate(317deg) brightness(89%) contrast(101%);
+}
+
+
+
+.rubrique  {
+    display: flex;
+    margin-top: 25px;
+    grid-row: 6;
+    grid-column: 2/3;
+    color: white;
+    font-family: 'Quicksand';
+    font-weight: 500;
+    font-size: 15px;
+    width: 110%;
+    
+    
+
+    .right_arrow{
+        display: inline-block;
+        height: 10px;
+        width: 10px;
+        filter: invert(13%) sepia(97%) saturate(6847%) hue-rotate(317deg) brightness(89%) contrast(101%);
+        margin-right: 5px;
+
+    }
+
+    .libelle{
+        display: inline-block;
+        position:relative;
+        margin-right: 5px;
+    }
+
+    .libelle:hover{
+        color: #db0084;
+    }
+}
+
+
+
+
+/*-----------------FIN FOOTER CSS-------------*/
