--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -1,10 +1,18 @@
 
+/*-----------------Variable CSS-------------*/
+
+:root{
+    --font: "Quicksand",sans-serif;
+}
+
+/*-----------------Fin Variable CSS-------------*/
+
 
 /*-----------------HEADER CSS-------------*/
 
 header{
     width: 100%;
-    font-family: "Quicksand",sans-serif;
+    font-family: var(--font);
 }
 
 .sticky {
@@ -99,7 +107,7 @@ header{
 }
 
 #header_middle #header_middle_middle .onglet {
-    font-family: "Quicksand",sans-serif;
+    font-family: var(--font);
     margin:5px;
     padding-top: 5px;
     font-size:12px;
@@ -194,7 +202,7 @@ header{
 }
 #add-favorite .autocomplete span {
     padding:'5px'  ;
-    font-family: "Quicksand",sans-serif;
+    font-family: var(--font);
     margin: 5px;
     font-size: 12px;
     font-weight: 600;
@@ -224,7 +232,7 @@ header{
     grid-template-columns: 20% 60% 20% ;
     background-image: linear-gradient(to bottom,#0076c9 0%,#1c9bd4 100%);
     padding: 2%;
-    font-family: "Quicksand";
+    font-family: var(--font);
     grid-template-rows:(7, 100px)
 }
 
@@ -247,7 +255,7 @@ header{
     grid-row: 3;
     grid-column:2/3;
     color: white;
-    font-family: 'Quicksand',sans-sherif;
+    font-family: var(--font);
     margin-top: 2px;
     font-weight: 600;
     scale: 0.9
@@ -309,7 +317,7 @@ header{
     grid-row: 6;
     grid-column: 2/3;
     color: white;
-    font-family: 'Quicksand';
+    font-family: var(--font);
     font-weight: 500;
     font-size: 15px;
     width: 110%;
